@@ -1,3 +1,11 @@
+2004-05-11  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* ext/libvisual/visual.c: (gst_visual_getcaps):
+	  use the right caps depending on endianness (I hope)
+	* ext/ogg/gstoggmux.c: (gst_ogg_mux_plugin_init):
+	  use GST_RANK_NONE for all non-decoding elements or spider gets
+	  mighty confused
+
 2004-05-11  Ronald Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_process_comment):
